--- a/website/application/templates/edit_profile.html
+++ b/website/application/templates/edit_profile.html
@@ -8,22 +8,22 @@
 
 {% block content %}
     <div id="header">Edit profile</div>
-
+    <br>
     <form method="POST">
-        <input type="text" name="username" placeholder="Username" value="{{user['username']}}" minlength="5" maxlength="20" required><br>
+        <input type="text" name="username" placeholder="Username" value="{{user['username']}}" minlength="5" maxlength="20" required>
         
-        <input type="email" name="email" placeholder="Email" value="{{user['email']}}" required><br>
+        <input type="email" name="email" placeholder="Email" value="{{user['email']}}" required>
         
-        <input type="text" name="name" placeholder="Name" value="{{user['name']}}" minlength="2" maxlenght="15" required><br>
+        <input type="text" name="name" placeholder="Name" value="{{user['name']}}" minlength="2" maxlenght="15" required>
         
-        <input type="text" name="surname" placeholder="Surname" value="{{user['surname']}}" minlenght="2" maxlenght="15" required><br>
+        <input type="text" name="surname" placeholder="Surname" value="{{user['surname']}}" minlenght="2" maxlenght="15" required>
         
-        <textarea name="bio" placeholder="Bio" maxlength="200">{{user['bio']}}</textarea><br>
+        <textarea name="bio" placeholder="Bio" maxlength="200">{{user['bio']}}</textarea>
         
-        <div class="section-content flex">
-            <input name="isEmailPublic" {% if user['isEmailPublic'] %} checked {% endif %} type="checkbox">
-            <div class="option-label">email visible to the public</div>
-        </div>
+        <span class="center cbox">
+			<input name="isEmailPublic" {% if user['isEmailPublic'] %} checked {% endif %} type="checkbox">
+			<label for="checkbox">E-mail visible to the public</label>
+		</span>
         
         <input type="submit" value="Submit changes" class="push-btn" id="btn">
     </form>
