--- a/website/application/templates/login.html
+++ b/website/application/templates/login.html
@@ -15,11 +15,11 @@
 			<input type="checkbox" name="keep_logged" id="checkbox">
 			<label for="checkbox">Keep me logged in</label>
 		</span>
-		<button class="push-btn fbtn center">Login!</button>
+		<input type="submit" value="Login!" class="push-btn fbtn center">
 	</form>
 	<br>
 	<div class="redirect">
 		<div class="center">Not a member?</div>
-		<a href="../register"><button class="push-btn fbtn">Register now!</button></a>
+		<button onclick="window.location.href='/register'" class="push-btn fbtn">Register now!</button>
 	</div>
 {% endblock %}
