--- a/website/application/templates/settings.html
+++ b/website/application/templates/settings.html
@@ -23,7 +23,7 @@
 
             <input type="password" name="cpassword" placeholder="Confirm Password" minlenght="8" maxlenght="35" required><br>
 
-            <input type="submit" value="Submit changes" class="push-btn" id="btn">
+            <input type="submit" value="Submit changes" class="push-btn">
         </form>
 
         <div class="section-title">Edit user:</div>
