--- a/website/application/static/style/layout.css
+++ b/website/application/static/style/layout.css
@@ -4,12 +4,12 @@ html, body {
 }
 
 body {
+    height: auto;
     background-color: #f9fcff;
     font-family: 'Roboto', sans-serif;
 }
 
 main {
-    height: min-content;
     margin: 10vh 2vh 20vh 2vh;
 }
 
@@ -142,7 +142,7 @@ main {
 
 
 /* Button style */
-input:not([type=checkbox]) {
+input:not([type=checkbox]):not([type=submit]) {
     width: 20vw;
     min-width: 200px;
     height: 4vh;
@@ -154,11 +154,11 @@ input:not([type=checkbox]) {
     color: #757575;
 }
 
-input:not([type=checkbox])::placeholder {
+input:not([type=checkbox]):not([type=submit])::placeholder {
     color: #8e8e8e;
 }
 
-input:not([type=checkbox]):focus {
+input:not([type=checkbox]):not([type=submit]):focus {
     border: 1px solid #345DA7;
     color: #345DA7;
 }
@@ -166,6 +166,8 @@ input:not([type=checkbox]):focus {
 .push-btn {
     height: 5vh;
     min-height: 50px;
+    width: 20vw;
+    min-width: 200px;
     margin: 1vh 0 1vh 0;
     background-color: #345DA7;
     border: none;
