--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -1,175 +1,160 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Kevin | {% block title %}{% endblock %}</title>
+    <head>
+        <title>Kevin | {% block title %}{% endblock %}</title>
 
-		<!-- Meta -->
-		<meta charset="UTF-8">
-		<meta lang="en">
-		<meta name="author" content="Andreanelli Bartocetti Parri Mariotti">
-		<meta name="keywords" content="kevin forum">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon.png') }}">
+        <!-- Meta -->
+        <meta charset="UTF-8">
+        <meta lang="en">
+        <meta name="author" content="Andreanelli Bartocetti Parri Mariotti">
+        <meta name="keywords" content="kevin forum">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon.png') }}">
 
-		<!-- CSS -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/icons_animations.css') }}">
-		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/layout.css') }}">
-		{% block css %}{% endblock %}
+        <!-- CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/icons_animations.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/layout.css') }}">
+        {% block css %}{% endblock %}
 
-		<!-- JS --> 
-		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-		<script src="https://kit.fontawesome.com/2e6be9a3fe.js" crossorigin="anonymous"></script>
-		{% if (nav | default("there", false)) %} <script src="{{ url_for('static', filename='script/navbar.js') }}"></script> {% endif %}
-		<!-- Popup
-		<script src="{{ url_for('static', filename='script/cookie_popup.js') }}" defer></script>
-		-->
-		{% block js %}{% endblock %}
-		{% if alert %} <script> alert("{{ alert }}"); </script> {% endif %}
-	</head>
+        <!-- JS --> 
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/2e6be9a3fe.js" crossorigin="anonymous"></script>
+        {% block js %}{% endblock %}
+        {% if alert %} <script> alert("{{ alert }}"); </script> {% endif %}
+    </head>
 
-	<body {% if (nav | default("there", false)) %} onload="update_navbar();" {% endif %}>
-		{% if (nav | default("there", false)) %}
-			<nav class="navbar navbar-expand-xl navbar-dark fixed-top topnav">
-				 <button class="menu btn navbar-toggler border-0 text-white" data-toggle="collapse" data-target="#collapse-target">
-					<span class="fas fa-ellipsis-h"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="collapse-target">
-					<a href="/">
-						<img class="logo" type="image/png" src="{{ url_for('static', filename='img/Logo_white_nobackground.png') }}" alt="Kevin">
-					</a>
+    <body>
+        {% if (nav | default("there", false)) %}
+            <nav class="navbar navbar-expand-xl navbar-dark fixed-top topnav">
+                 <button class="menu btn navbar-toggler border-0 text-white" data-toggle="collapse" data-target="#collapse-target">
+                    <span class="fas fa-ellipsis-h"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapse-target">
+                    <a href="/">
+                        <img class="logo" type="image/png" src="{{ url_for('static', filename='img/Logo_white_nobackground.png') }}" alt="Kevin">
+                    </a>
 
-					<ul class="navbar-nav">
-						<li class="nav-item dropdown">
-							<a href="#" data-target="dropdown_target" data-toggle="dropdown"></a>
-							<button class="navbtn btn text-white hvr-icon-sink" type="button"><i class="hvr-icon fas fa-chevron-circle-down"></i> Dropdown</button></a>
-							<div class="dropdown-menu" aria-labelledby="dropdown_target">
-								<a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="#">Action</a>
-								<a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="#">Another action</a>
-								<a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="#">Another action ancora</a>
-							</div>
-						</li>
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a href="#" data-target="dropdown_target" data-toggle="dropdown"></a>
+                            <button class="navbtn btn text-white hvr-icon-sink" type="button"><i class="hvr-icon fas fa-chevron-circle-down"></i> Dropdown</button></a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown_target">
+                                <a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="#">Action</a>
+                                <a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="#">Another action</a>
+                                <a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="#">Another action ancora</a>
+                            </div>
+                        </li>
 
-						<li class="navbar-item">
-							<a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
-								<i class="fas fa-globe-europe"></i> News & Actuality
-							</button> </a>
-						</li>
+                        <li class="navbar-item">
+                            <a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
+                                <i class="fas fa-globe-europe"></i> News & Actuality
+                            </button> </a>
+                        </li>
 
-						<li class="navbar-item">
-							<a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
-								<i class="fas fa-cat"></i> Meme
-							</button> </a>
-						</li>
+                        <li class="navbar-item">
+                            <a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
+                                <i class="fas fa-cat"></i> Meme
+                            </button> </a>
+                        </li>
 
-						<li class="navbar-item">
-							<a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
-								<i class="fas fa-code"></i> Programming
-							</button> </a>
-						</li>
+                        <li class="navbar-item">
+                            <a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
+                                <i class="fas fa-code"></i> Programming
+                            </button> </a>
+                        </li>
 
-						<li class="navbar-item">
-							<a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
-								<i class="fas fa-flask"></i> Science
-							</button> </a>
-						</li>
+                        <li class="navbar-item">
+                            <a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
+                                <i class="fas fa-flask"></i> Science
+                            </button> </a>
+                        </li>
 
-						<li class="navbar-item">
-							<a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
-								<i class="fas fa-feather-alt"></i> Dev's blog
-							</button> </a>
-						</li>
+                        <li class="navbar-item">
+                            <a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
+                                <i class="fas fa-feather-alt"></i> Dev's blog
+                            </button> </a>
+                        </li>
 
-						<li class="navbar-item">
-							<a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
-								<i class="fab fa-rocketchat"></i> AMA / Just Chatting
-							</button> </a>
-						</li>
+                        <li class="navbar-item">
+                            <a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
+                                <i class="fab fa-rocketchat"></i> AMA / Just Chatting
+                            </button> </a>
+                        </li>
 
-						<li class="navbar-item logged_buttons">
-							<a href="/create-post"> <button class="navbtn btn text-white logged buttons" type="button">
-								<i class="fas fa-plus-square"></i> Create Post
-							</button> </a>
-						</li>
+                        {% if username %}
+                            <li class="navbar-item logged_buttons">
+                                <a href="/create-post"> <button class="navbtn btn text-white logged buttons" type="button">
+                                    <i class="fas fa-plus-square"></i> Create Post
+                                </button> </a>
+                            </li>
 
-						<li class="navbar-item logged_buttons">
-							<a href="/user"> <button class="navbtn btn text-white" type="button">
-								<i class="fas fa-user"></i> Profile
-							</button> </a>
-						</li>
+                            <li class="navbar-item logged_buttons">
+                                <a href="/users/{{ username }}"> <button class="navbtn btn text-white" type="button">
+                                    <i class="fas fa-user"></i> Profile
+                                </button> </a>
+                            </li>
 
-						<li class="navbar-item logged_buttons">
-							<a href="/logout"> <button class="navbtn btn text-white" type="button">
-								<i class="fas fa-sign-out-alt"></i> Logout
-							</button> </a>
-						</li>
+                            <li class="navbar-item logged_buttons">
+                                <a href="/logout"> <button class="navbtn btn text-white" type="button">
+                                    <i class="fas fa-sign-out-alt"></i> Logout
+                                </button> </a>
+                            </li>
 
-						<li class="navbar-item unlogged_buttons">
-							<a href="/register"> <button class="navbtn btn text-white" type="button">
-								<i class="fas fa-user-plus"></i> Register
-							</button> </a>
-						</li>
+                        {% else %}
 
-						<li class="navbar-item unlogged_buttons">
-							<a href="/login"> <button class="navbtn btn text-white" type="button">
-								<i class="fas fa-sign-in-alt"></i> Login
-							</button> </a>
-						</li>
-					</ul>
-				</div>
-			</nav>
-		{% endif %}
+                            <li class="navbar-item unlogged_buttons">
+                                <a href="/register"> <button class="navbtn btn text-white" type="button">
+                                    <i class="fas fa-user-plus"></i> Register
+                                </button> </a>
+                            </li>
 
-		<main>{% block content %}{% endblock %}</main>
+                            <li class="navbar-item unlogged_buttons">
+                                <a href="/login"> <button class="navbtn btn text-white" type="button">
+                                    <i class="fas fa-sign-in-alt"></i> Login
+                                </button> </a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </nav>
+        {% endif %}
 
-		<!-- Popup
-		<div id="popup-box">
-			<div id="cookie-popup">
-				<div id="popup-content">
-					<div id="popup-hey">Hey!</div>
-					<div id="popup-text">This site uses cookies. If you agree with that, click "I Agree"</i>. If you don't, we are sorry but you can't use our site.</div>
-					<div id="popup-buttons">
-						<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><span class="popup-button">I <b>DON'T</b> agree</span></a>
-						<span class="popup-button" onclick="close_cookie_popup();">I Agree</span>
-					</div>
-				</div>
-			</div>
-		</div>
-		-->
+        <main>{% block content %}{% endblock %}</main>
 
-		{% if (footer | default("there", false)) %}
-			<footer class="foot fixed-bottom">
-				<div class="row text-center inline-block">
-					<div class="col-md">
-						<a href="#">
-							<button class="btn text-white fbutton" type="button">
-								<i class="fab fa-github"></i>
-							</button>
-						</a>
-						
-						<a href="#">
-							<button class="btn text-white fbutton" type="button">
-								<i class="fas fa-users"></i> About
-							</button>
-						</a>
+        {% if (footer | default("there", false)) %}
+            <footer class="foot fixed-bottom">
+                <div class="row text-center inline-block">
+                    <div class="col-md">
+                        <a href="#">
+                            <button class="btn text-white fbutton" type="button">
+                                <i class="fab fa-github"></i>
+                            </button>
+                        </a>
 
-						<a href="#">
-							<button class="btn text-white fbutton" type="button">
-								<i class="fas fa-tools"></i> Support
-							</button>
-						</a>
+                        <a href="#">
+                            <button class="btn text-white fbutton" type="button">
+                                <i class="fas fa-users"></i> About
+                            </button>
+                        </a>
 
-						<span class="back-to-top" onclick="$('html, body').animate({scrollTop: 0}, 300);">
-							<button class="btn fbutton" type="button">
-								<i class="far fa-arrow-alt-circle-up"></i>
-							</button>
-						</span>
-					</div>
-				</div>
-			</footer>	
-		{% endif %}
-	</body>
+                        <a href="#">
+                            <button class="btn text-white fbutton" type="button">
+                                <i class="fas fa-tools"></i> Support
+                            </button>
+                        </a>
+
+                        <span class="back-to-top" onclick="$('html, body').animate({scrollTop: 0}, 300);">
+                            <button class="btn fbutton" type="button">
+                                <i class="far fa-arrow-alt-circle-up"></i>
+                            </button>
+                        </span>
+                    </div>
+                </div>
+            </footer>
+        {% endif %}
+    </body>
 </html>
