--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -6,14 +6,12 @@
         <!-- Meta -->
         <meta charset="UTF-8">
         <meta lang="en">
-        <meta name="author" content="Andreanelli Bartocetti Parri Mariotti">
-        <meta name="keywords" content="kevin forum">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon.png') }}">
 
         <!-- CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/icons_animations.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/layout.css') }}">
         {% block css %}{% endblock %}
