--- a/website/application/static/style/home.css
+++ b/website/application/static/style/home.css
@@ -19,13 +19,13 @@ main {
 
 #post-title {
 	color: #0499cf;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 1.5em;
 }
 
 #post-body {
 	margin-top: 1.5vh;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 1.25em;
 }
 
