--- a/website/application/templates/create_post.html
+++ b/website/application/templates/create_post.html
@@ -3,14 +3,16 @@
 
 
 {% block css %}
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/create_post.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/create_post.css') }}">
 {% endblock %}
 
 {% block content %}
-	<h1 id="title">Create post</h1>
-	<form method="POST" action="/create_post">
-		<textarea name="post_title" placeholder="Post Title (optional)" maxlength="100" col="127" id="post-title"></textarea>
-		<textarea name="post_body" placeholder="Post text" required maxlength="3000" id="post-body"></textarea>
-		<button class="push-btn">Post <i class="fas fa-arrow-up"></i></button>
-	</form>
+    <h1 id="title">Create post</h1>
+
+    <form method="POST" action="/create_post">
+        <textarea name="post_title" placeholder="Post Title (optional)" maxlength="100" col="127" id="post-title"></textarea>
+        <textarea name="post_body" placeholder="Post text" maxlength="3000" id="post-body" required></textarea>
+
+        <button class="push-btn">Post <i class="fas fa-arrow-up"></i></button>
+    </form>
 {% endblock %}
