--- a/website/application/templates/edit_profile.html
+++ b/website/application/templates/edit_profile.html
@@ -7,23 +7,23 @@
 {% endblock %}
 
 {% block content %}
-    <div id="header">Edit profile</div>
-    <br>
+    <div id="header">Edit profile</div> <br>
+
     <form method="POST">
-        <input type="text" name="username" placeholder="Username" value="{{user['username']}}" minlength="5" maxlength="20" required>
+        <input type="text" name="username" placeholder="Username" value="{{ user['username'] }}" minlength="5" maxlength="20" required>
+
+        <input type="email" name="email" placeholder="Email" value="{{ user['email'] }}" required>
+
+        <input type="text" name="name" placeholder="Name" value="{{ user['name'] }}" minlength="2" maxlenght="15" required>
+
+        <input type="text" name="surname" placeholder="Surname" value="{{ user['surname'] }}" minlenght="2" maxlenght="15" required>
         
-        <input type="email" name="email" placeholder="Email" value="{{user['email']}}" required>
-        
-        <input type="text" name="name" placeholder="Name" value="{{user['name']}}" minlength="2" maxlenght="15" required>
-        
-        <input type="text" name="surname" placeholder="Surname" value="{{user['surname']}}" minlenght="2" maxlenght="15" required>
-        
-        <textarea name="bio" placeholder="Bio" maxlength="200">{{user['bio']}}</textarea>
+        <textarea name="bio" placeholder="Bio" maxlength="200">{{ user['bio'] }}</textarea>
         
         <span class="center cbox">
-			<input name="isEmailPublic" {% if user['isEmailPublic'] %} checked {% endif %} type="checkbox">
-			<label for="checkbox">E-mail visible to the public</label>
-		</span>
+            <input name="isEmailPublic" type="checkbox" {% if user['isEmailPublic'] %} checked {% endif %}>
+            <label for="checkbox">E-mail visible to the public</label>
+        </span>
         
         <input type="submit" value="Submit changes" class="push-btn" id="btn">
     </form>
