--- a/website/application/templates/home.html
+++ b/website/application/templates/home.html
@@ -3,15 +3,13 @@
 
 
 {% block css %}
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/home.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/home.css') }}">
 {% endblock %}
 
 {% block content %}
     <div class="post-container">
-        <div class="post-section" id="post-title">Lorem ipsum dolor	sit amet</div>
-        <div class="post-section" id="post-author">
-            written by: <a href="#" class="link">ff</a> &bull; approved by: <a href="#" class="link">ff</a>
-        </div>
+        <div class="post-section" id="post-title">Lorem ipsum dolor sit amet</div>
+        <a class="post-section link" id="post-author" href="#">@ff</a>
         <div class="post-section" id="post-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
     </div>
 {% endblock %}
