--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -10,112 +10,75 @@
         <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon.png') }}">
 
         <!-- CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/icons_animations.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/layout.css') }}">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato&display=swap">
+        <link rel="stylesheet" href="{{ url_for('static', filename='style/icons_animations.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='style/layout.css') }}">
         {% block css %}{% endblock %}
 
         <!-- JS --> 
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <script src="https://kit.fontawesome.com/2e6be9a3fe.js" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+        <script src="https://kit.fontawesome.com/2e6be9a3fe.js"></script>
+        <script src="{{ url_for('static', filename='script/navbar.js') }}"></script>
         {% block js %}{% endblock %}
         {% if alert %} <script> alert("{{ alert }}"); </script> {% endif %}
     </head>
 
-    <body>
-        {% if (nav | default("there", false)) %}
+    <body {% if nav | default("there", false) %} onload="update_navbar();" {% endif %}>
+        {% if nav | default("there", false) %}
             <nav class="navbar navbar-expand-xl navbar-dark fixed-top topnav">
-                 <button class="menu btn navbar-toggler border-0 text-white" data-toggle="collapse" data-target="#collapse-target">
+                <button class="menu btn navbar-toggler border-0 text-white" data-toggle="collapse" data-target="#collapse-target">
                     <span class="fas fa-ellipsis-h"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="collapse-target">
                     <a href="/">
                         <img class="logo" type="image/png" src="{{ url_for('static', filename='img/Logo_white_nobackground.png') }}" alt="Kevin">
                     </a>
 
                     <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a href="#" data-target="dropdown_target" data-toggle="dropdown"></a>
-                            <button class="navbtn btn text-white hvr-icon-sink" type="button"><i class="hvr-icon fas fa-chevron-circle-down"></i> Dropdown</button></a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown_target">
-                                <a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="#">Action</a>
-                                <a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="#">Another action</a>
-                                <a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="#">Another action ancora</a>
-                            </div>
-                        </li>
-
-                        <li class="navbar-item">
-                            <a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
-                                <i class="fas fa-globe-europe"></i> News & Actuality
-                            </button> </a>
-                        </li>
-
-                        <li class="navbar-item">
-                            <a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
-                                <i class="fas fa-cat"></i> Meme
-                            </button> </a>
-                        </li>
-
-                        <li class="navbar-item">
-                            <a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
-                                <i class="fas fa-code"></i> Programming
-                            </button> </a>
-                        </li>
-
-                        <li class="navbar-item">
-                            <a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
-                                <i class="fas fa-flask"></i> Science
-                            </button> </a>
-                        </li>
-
-                        <li class="navbar-item">
-                            <a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
-                                <i class="fas fa-feather-alt"></i> Dev's blog
-                            </button> </a>
-                        </li>
-
-                        <li class="navbar-item">
-                            <a href="#"> <button class="navbtn btn text-white logged buttons" type="button">
-                                <i class="fab fa-rocketchat"></i> AMA / Just Chatting
-                            </button> </a>
-                        </li>
-
                         {% if username %}
-                            <li class="navbar-item logged_buttons">
-                                <a href="/create-post"> <button class="navbtn btn text-white logged buttons" type="button">
-                                    <i class="fas fa-plus-square"></i> Create Post
-                                </button> </a>
-                            </li>
-
-                            <li class="navbar-item logged_buttons">
-                                <a href="/users/{{ username }}"> <button class="navbtn btn text-white" type="button">
-                                    <i class="fas fa-user"></i> Profile
-                                </button> </a>
-                            </li>
-
-                            <li class="navbar-item logged_buttons">
-                                <a href="/logout"> <button class="navbtn btn text-white" type="button">
-                                    <i class="fas fa-sign-out-alt"></i> Logout
-                                </button> </a>
-                            </li>
-
-                        {% else %}
-
-                            <li class="navbar-item unlogged_buttons">
-                                <a href="/register"> <button class="navbtn btn text-white" type="button">
-                                    <i class="fas fa-user-plus"></i> Register
-                                </button> </a>
-                            </li>
-
-                            <li class="navbar-item unlogged_buttons">
-                                <a href="/login"> <button class="navbtn btn text-white" type="button">
-                                    <i class="fas fa-sign-in-alt"></i> Login
-                                </button> </a>
-                            </li>
+                            {% set buttons =
+                                ("News & Actuality", "#", "fas fa-globe-europe"),
+                                        ("Meme", "#", "fas fa-cat"),
+                                        ("Programming", "#", "fas fa-code"),
+                                        ("Science", "#", "fas fa-flask"),
+                                        ("Dev's blog", "#", "fas fa-feather-alt"),
+                                        ("AMA / Just Chatting", "#", "fab fa-rocketchat"),                                          
+                                        ("Create Post", "/create-post", "fas fa-plus-square","logged_buttons"),
+                                        ("Profile", "#", "fas fa-user", "logged_buttons"),
+                                        ("Logout", "/logout", "fas fa-sign-out-alt", "logged_buttons"),
+                                        ("Register", "/register", "fas fa-user-plus","unlogged_buttons"),
+                                        ("Login", "/login", "fas fa-sign-in-alt", "unlogged_buttons")
                         {% endif %}
+                                         )
+
+
+                        {% for button in (
+                                          ("News & Actuality", "#", "fas fa-globe-europe"),
+                                          ("Meme", "#", "fas fa-cat"),
+                                          ("Programming", "#", "fas fa-code"),
+                                          ("Science", "#", "fas fa-flask"),
+                                          ("Dev's blog", "#", "fas fa-feather-alt"),
+                                          ("AMA / Just Chatting", "#", "fab fa-rocketchat"),
+                                          
+                                          {% if username %}
+                                            ("Create Post", "/create-post", "fas fa-plus-square", "logged_buttons"),
+                                          ("Profile", "#", "fas fa-user", "logged_buttons"),
+                                          ("Logout", "/logout", "fas fa-sign-out-alt", "logged_buttons"),
+                                          {% else %}
+                                          ("Register", "/register", "fas fa-user-plus", "unlogged_buttons"),
+                                          ("Login", "/login", "fas fa-sign-in-alt", "unlogged_buttons")
+                                          {% endif %}
+                                         ) %}
+                            <li class="navbar-item {{ ' '.join(button[3:]) }}">
+                                <a href="{{ button[1] }}"> <button class="navbtn btn text-white logged buttons" type="button">
+                                    <i class="{{ button[2] }}"></i> {{ button[0] }}
+                                </button> </a>
+                            </li>
+                        {% endfor %}
                     </ul>
                 </div>
             </nav>
@@ -123,36 +86,28 @@
 
         <main>{% block content %}{% endblock %}</main>
 
-        {% if (footer | default("there", false)) %}
-            <footer class="foot fixed-bottom">
-                <div class="row text-center inline-block">
-                    <div class="col-md">
-                        <a href="#">
+        <footer class="foot fixed-bottom">
+            <div class="row text-center inline-block">
+                <div class="col-md">
+                    {% for button in (
+                                      ("Github", "https://github.com/Trinitrotoluenisti/kevin", "fab fa-github"),
+                                      ("About", "#", "fas fa-users"),
+                                      ("Support", "#", "fas fa-tools")
+                                     ) %}
+                        <a href="{{ button[1] }}">
                             <button class="btn text-white fbutton" type="button">
-                                <i class="fab fa-github"></i>
+                                <i class="{{ button[2] }}"></i> {{ button[0] }}
                             </button>
                         </a>
+                    {% endfor %}
 
-                        <a href="#">
-                            <button class="btn text-white fbutton" type="button">
-                                <i class="fas fa-users"></i> About
-                            </button>
-                        </a>
-
-                        <a href="#">
-                            <button class="btn text-white fbutton" type="button">
-                                <i class="fas fa-tools"></i> Support
-                            </button>
-                        </a>
-
-                        <span class="back-to-top" onclick="$('html, body').animate({scrollTop: 0}, 300);">
-                            <button class="btn fbutton" type="button">
-                                <i class="far fa-arrow-alt-circle-up"></i>
-                            </button>
-                        </span>
-                    </div>
+                    <span class="back-to-top" onclick="$('html, body').animate({scrollTop: 0}, 300);">
+                        <button class="btn fbutton" type="button">
+                            <i class="far fa-arrow-alt-circle-up"></i>
+                        </button>
+                    </span>
                 </div>
-            </footer>
-        {% endif %}
+            </div>
+        </footer>
     </body>
 </html>
